--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+
+jwt.secret = woejsp_adyRMfUkb1JhiY4f1jQR_WJ2QEuOZck4KmdM
+jwt.lifetime = 30m
