--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.flywaydb:flyway-core'
 //    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
-//    implementation 'io.jsonwebtoken:jjwt'
+//    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 
 
