--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,10 @@ services:
   web:
     image: myapp
     container_name: "web"
+    environment:
+      - spring.datasource.url=jdbc:postgresql://app-db:5432/SB
+      - spring.datasource.username=postgres
+      - spring.datasource.password=postgres
     ports:
       - "8082:8080"
     depends_on:
