--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.baseline-on-migrate=true
 
 jwt.secret = woejsp_adyRMfUkb1JhiY4f1jQR_WJ2QEuOZck4KmdM
 jwt.lifetime = 30m
